worked on the Refresh and XR's interface

--- a/src/index.scss
+++ b/src/index.scss
@@ -1357,6 +1357,11 @@ button{
  }
 
 
+ @media screen and (max-width: 338px) {
+  .rate{
+    height: 420px;
+  }
+ }
 
  @media screen and (max-width:300px) {
 
