--- a/src/index.scss
+++ b/src/index.scss
@@ -1397,7 +1397,7 @@ button{
   }
 
   .rate{
-    height: 550px;
+    height: 510px;
   }
 
 
@@ -1418,6 +1418,9 @@ button{
   
   .options{
     width: 60px;
+  }
+  .value{
+    top: 10px;
   }
   .about{
     font-size: 10px;
